# mm3ds

./: .gitignore  Cargo.toml  Makefile  compile_commands.json
engine/: build.rs
engine/gfx/: character.mesh  lemon.t3s
engine/src/: main.rs  shader.pica
gltf_tool/: Cargo.toml
gltf_tool/src/: main.rs
gltf_tool/test/: character.blend  character.blend1  character.glb
source/: main.c  panic.c  renderer.c
source/inc/: panic.h  renderer.h
src/: main.rs
